# microexec

./: .gitignore  readme.md  requirements.md
cpp/: CMakeLists.txt
cpp/src/: bindings.cpp  book.cpp  book.hpp  engine.cpp  engine.hpp  execution.cpp  execution.hpp  flow.cpp  flow.hpp  stats.hpp
experiments/: compare_rl_twap_vwap.py  progress.py  run_ac.py  run_event_twap.py  run_mm_as.py  run_mm_as_grid.py  run_rl_ppo.py  run_sim.py  run_truefx.py  run_twap.py  run_vwap.py
lob/: _cpp.py  book.py  types.py
sim/: __init__.py  engine.py  event_sim.py  flow.py
sim/execution/: almgren_chriss.py  twap.py  vwap.py
sim/rl/: __init__.py  env.py  ppo.py
tests/: test_book.py
